<resources>
    <string name="app_name">NewsApp</string>
    <string name="news">News</string>
    <string name="saved">Saved</string>
    <string name="filter">Filter</string>
    <string name="save_article">Save article</string>
    <string name="see_in_browser">See in browser</string>
    <string name="all">All</string>
    <string name="top_news">Top news</string>
    <string name="apply_filter">Apply filter</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="keywords">Keywords</string>
    <string name="united_states">United States</string>
    <string name="top_news_no_params">Too many search results. Please set at least one filter parameter.</string>
    <string name="all_news_no_params">Too many search results. Please use at least one of the following: KEYWORDS, DOMAINS.</string>
    <string name="domains">Domains</string>
    <string name="domains_hint">eg bbc.co.uk, techcrunch.com, engadget.com</string>
    <string name="excluded_domains">Excluded domains</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="language">Language</string>
    <string name="remove_article">Remove from database</string>
    <string name="error_load_news">An unknown error has occurred trying to load news</string>
    <string name="error_load_database">An unknown error has occurred trying to load data from database</string>
    <string name="error_article_already_saved">Article is already saved in the database</string>
    <string name="error_save_data">An unknown error has occurred trying to save data to database</string>
    <string name="error_no_id">No ID is associated with the article</string>
    <string name="error_delete_from_db">An unknown error has occurred trying to delete record from database</string>
    <string name="error_delete_no_article">The article has not been found in the database</string>
    <string name="select_date">Select date</string>
</resources>