<?xml version="1.0" encoding="utf-8"?>
<com.ks.newsapp.ui.news.CustomDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.news.NewsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/filter_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/feed_button_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/top_news_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_news" />

                <Button
                    android:id="@+id/all_news_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:id="@+id/top_news_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:paddingBottom="16dp">
                    <AutoCompleteTextView
                        android:id="@+id/country_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/united_states"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    android:paddingBottom="16dp">
                    <AutoCompleteTextView
                        android:id="@+id/category_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/keywords"
                    android:paddingBottom="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/keywords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/top_news_apply_filter_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_filter" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/all_news_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BLEELELE" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</com.ks.newsapp.ui.news.CustomDrawerLayout>